--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,13 @@
     <string name="kelvin">Kelvin</string>
     <string name="fahrenheit">Fahrenheit</string>
     <string name="celsius">Celsius</string>
+    <string name="tap_to_ask">Tap to Ask</string>
+    <string name="cancel">Cancel</string>
+    <string name="listening">Listening…</string>
+    <string name="tap_and_ask">Tap mic</string>
+    <string name="the_temperature_is">The temperature is %d.</string>
+    <string name="the_wind_is">The wind is %d.</string>
+    <string name="the_precipitation_not_available">The precipitation is not available!</string>
+    <string name="weather_message">%s in %s at %s</string>
+
 </resources>
