--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="the_wind_is">The wind is %d.</string>
     <string name="the_precipitation_not_available">The precipitation is not available!</string>
     <string name="weather_message">%s in %s at %s</string>
+    <string name="ask_forecast">Ask Forecast</string>
 
 </resources>
