--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -9,8 +9,8 @@
     <string name="dismiss">Cancelar</string>
     <string name="unit_format">Formato de unidade</string>
     <string name="settings">Configurações</string>
-    <string name="please_activate_your_location">Por favor, para continuar ative a localização no deu telémovel.</string>
-    <string name="error_getting_your_location">Error ao obter a sua localização.</string>
+    <string name="please_activate_your_location">Por favor, para continuar active a localização no seu telémovel.</string>
+    <string name="error_getting_your_location">Erro ao obter a sua localização.</string>
     <string name="error_grant_location_permission">Por favor, para continuar active a permissão de localização.</string>
     <string name="pressure">Pressão</string>
     <string name="humidity">Humidade</string>
@@ -18,9 +18,9 @@
     <string name="sea_level">Pressão do Mar</string>
     <string name="tap_to_ask">Toque para Questionar</string>
     <string name="cancel">Cancelar</string>
-    <string name="listening">Escutando...</string>
+    <string name="listening">Ouvindo...</string>
     <string name="tap_and_ask">Toque no micro</string>
-    <string name="units_summary">A Temperatura está disponível nas unidades Fahrenheit, Celsius and Kelvin.</string>
+    <string name="units_summary">A Temperatura está disponível nas unidades Fahrenheit, Celsius e Kelvin.</string>
     <string name="language">Linguagem de voz</string>
     <string name="english">Inglês</string>
     <string name="portuguese">Português</string>
